--- a/pages/myGame/myGame.wxml
+++ b/pages/myGame/myGame.wxml
@@ -1,6 +1,5 @@
 <!--myGame.wxml-->
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
-  
     <view class="page__bd">
         <view class="weui-tab">
             <view class="weui-navbar">
@@ -14,9 +13,16 @@
             <view class="weui-tab__panel">
                 <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
                     <view class="page__hd">
-                        <view class="page__title">我发布的</view>
+                        <view class="page__title">现有比赛</view>
                     </view>
-                    <view wx:for="{{myCreatedGames}}" wx:key="*this" >
+
+                    <block wx:if="{{availableGames.length === 0}}">
+                        <view class="weui-loadmore weui-loadmore_line">
+                            <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+                        </view>
+                    </block>
+
+                    <view wx:for="{{availableGames}}" wx:key="*this" >
                         <view class="page__bd">
                             <view class="weui-form-preview">
                                 <view class="weui-form-preview__hd">
@@ -47,9 +53,57 @@
                     </view>
                 </view>
                 <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
-                <view class="page__hd">
+                    <view class="page__hd">
+                        <view class="page__title">我发布的</view>
+                    </view>
+
+                    <block wx:if="{{myCreatedGames.length === 0}}">
+                        <view class="weui-loadmore weui-loadmore_line">
+                            <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+                        </view>
+                    </block>
+
+                    <view wx:for="{{myCreatedGames}}" wx:key="*this" >
+                        <view class="page__bd">
+                            <view class="weui-form-preview">
+                                <view class="weui-form-preview__hd">
+                                    <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">比赛名称</view>
+                                        <view class="weui-form-preview__value_in-hd">{{item.gameName}}</view>
+                                    </view>
+                                </view>
+                                <view class="weui-form-preview__bd">
+                                    <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">日期</view>
+                                        <view class="weui-form-preview__value">{{item.gameDate}}</view>
+                                    </view>
+                                    <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">时间</view>
+                                        <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
+                                    </view>
+                                    <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">需要裁判数</view>
+                                        <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
+                                    </view>
+                                </view>
+                                <view class="weui-form-preview__ft">
+                                    <navigator url="/pages/enrol/enrol?colId={{item._id}}&own=true" class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">查看</navigator>
+                                </view>
+                            </view>
+                        </view>
+                    </view>
+                </view>
+                <view class="weui-tab__content" hidden="{{activeIndex != 2}}">
+                    <view class="page__hd">
                         <view class="page__title">我报名的</view>
                     </view>
+
+                     <block wx:if="{{myEnroledGames.length === 0}}">
+                        <view class="weui-loadmore weui-loadmore_line">
+                            <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+                        </view>
+                    </block>
+
                     <view wx:for="{{myEnroledGames}}" wx:key="*this" >
                         <view class="page__bd">
                             <view class="weui-form-preview">
@@ -84,6 +138,4 @@
             </view>
         </view>
     </view>
-
-  
 </view>
