add share and delete game function;

--- a/pages/enrol/enrol.wxml
+++ b/pages/enrol/enrol.wxml
@@ -110,4 +110,8 @@
     </view>
   </block>
 
+  <view class="weui-btn-area">
+    <button class="weui-btn" type="warn" bindtap="deleteGame">删除比赛</button>
+  </view>
+
 </view>
