--- a/pages/createGame/createGame.wxml
+++ b/pages/createGame/createGame.wxml
@@ -17,7 +17,15 @@
         <view class="weui-cell__bd">
           <input class="weui-input" placeholder="请输入赛事名称" name="gameName" bindinput="bindGameName" value='{{gameName}}'/>
         </view>
-    </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">发布者</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" placeholder="请输入赛事发布者" name="gamePublisher" bindinput="bindGamePublisher" value='{{gamePublisher}}'/>
+        </view>
+      </view>
     <view class="weui-cell weui-cell_input">
       <view class="weui-cell__hd">
         <view class="weui-label">日期</view>
@@ -64,10 +72,10 @@
   </view>
   </form>
   
-  <view class="weui-footer">
+  <!-- <view class="weui-footer">
     <view class="weui-footer__links">
       <navigator url="https://github.com/hyq77766177" class="weui-footer__link">SoraYama</navigator>
     </view>
     <view class="weui-footer__text">Copyright © 2017 sorayamah.org</view>
-  </view>
+  </view> -->
 </view>
