--- a/pages/myGame/myGame.wxml
+++ b/pages/myGame/myGame.wxml
@@ -33,6 +33,10 @@
                                 </view>
                                 <view class="weui-form-preview__bd">
                                     <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">发布者</view>
+                                        <view class="weui-form-preview__value">{{item.gamePublisher}}</view>
+                                    </view>
+                                    <view class="weui-form-preview__item">
                                         <view class="weui-form-preview__label">日期</view>
                                         <view class="weui-form-preview__value">{{item.gameDate}}</view>
                                     </view>
@@ -41,7 +45,7 @@
                                         <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
                                     </view>
                                     <view class="weui-form-preview__item">
-                                        <view class="weui-form-preview__label">需要裁判数</view>
+                                        <view class="weui-form-preview__label">需要裁判</view>
                                         <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
                                     </view>
                                 </view>
@@ -74,6 +78,10 @@
                                 </view>
                                 <view class="weui-form-preview__bd">
                                     <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">发布者</view>
+                                        <view class="weui-form-preview__value">{{item.gamePublisher}}</view>
+                                    </view>
+                                    <view class="weui-form-preview__item">
                                         <view class="weui-form-preview__label">日期</view>
                                         <view class="weui-form-preview__value">{{item.gameDate}}</view>
                                     </view>
@@ -82,7 +90,7 @@
                                         <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
                                     </view>
                                     <view class="weui-form-preview__item">
-                                        <view class="weui-form-preview__label">需要裁判数</view>
+                                        <view class="weui-form-preview__label">需要裁判</view>
                                         <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
                                     </view>
                                 </view>
@@ -115,6 +123,10 @@
                                 </view>
                                 <view class="weui-form-preview__bd">
                                     <view class="weui-form-preview__item">
+                                        <view class="weui-form-preview__label">发布者</view>
+                                        <view class="weui-form-preview__value">{{item.gamePublisher}}</view>
+                                    </view>
+                                    <view class="weui-form-preview__item">
                                         <view class="weui-form-preview__label">日期</view>
                                         <view class="weui-form-preview__value">{{item.gameDate}}</view>
                                     </view>
@@ -123,7 +135,7 @@
                                         <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
                                     </view>
                                     <view class="weui-form-preview__item">
-                                        <view class="weui-form-preview__label">需要裁判数</view>
+                                        <view class="weui-form-preview__label">需要裁判</view>
                                         <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
                                     </view>
                                 </view>
