--- a/pages/refereeInfo/refereeInfo.wxml
+++ b/pages/refereeInfo/refereeInfo.wxml
@@ -1,7 +1,5 @@
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
-
   <view class="weui-toptips weui-toptips_warn" wx:if="{{showTopTips}}">表单缺项</view>
-
   <view class="page__bd">
     <view class="weui-tab">
       <view class="weui-navbar">
@@ -19,114 +17,198 @@
       <!-- end of nav_bar -->
       <view class="weui-tab__panel">
         <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
-          <view class="page__hd">
-            <view class="page__title">注册你的信息</view>
+          <block wx:if="{{!!myInfo}}">
+            <view class="page__bd">
+              <view class="page__hd">
+                <view class="page__title">我的信息</view>
+              </view>
+              <view class="weui-form-preview">
+                <view class="weui-form-preview__hd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">姓名</view>
+                    <view class="weui-form-preview__value_in-hd">{{myInfo.refereeName}}</view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__bd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">身高</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeHeight}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">体重</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeWeight}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">手机</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereePhoneNumber}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">身份证号</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeIdNumber}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">学号</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeScholarId}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">京卡卡号</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeCardNumber}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">联行号</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeBankNumber}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">裁判等级</view>
+                    <view class="weui-form-preview__value">{{myInfo.refereeClass}}</view>
+                  </view>
+                </view>
+              </view>
+              <view class="weui-btn-area" hidden="{{goModify}}">
+                <button class="weui-btn" bindtap="modifyInfo" type="primary">修改</button>
+              </view>
+            </view>
+          </block>
+          <view hidden="{{!goModify && !!myInfo}}">
+            <view class="page__hd">
+              <view class="page__title">{{goModify ? "修改" : "注册"}}你的信息</view>
+            </view>
+            <form bindreset='formReset' bindsubmit='formSubmit'>
+              <view class="weui-cells__title">基本信息</view>
+              <view class="weui-cells weui-cells_after-title">
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">姓名</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" placeholder="请输入你的姓名(必填)" name="refereeName" bindinput="bindRefereeName"
+                           value='{{refereeName}}'  />
+                  </view>
+                </view>
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">身高</view>
+                  </view>
+                  <view class="weui-cell weui-cell_select">
+                    <view class="weui-cell__bd ">
+                      <picker class="weui-picker" name="refereeHeight" value='{{refereeHeight}}' mode="selector"
+                              bindchange="bindHeightChange" range='{{heights}}'>
+                        <view class="weui-select">{{heights[heightIndex]}}</view>
+                      </picker>
+                    </view>
+                  </view>
+                  <view class="weui-cell__hd">
+                    <view class="weui-label" style="margin-left: 10px">体重</view>
+                  </view>
+                  <view class="weui-cell weui-cell_select">
+                    <view class="weui-cell__bd">
+                      <picker class="weui-picker" name="refereeWeight" value='{{refereeWeight}}' mode="selector"
+                              bindchange="bindWeightChange" range='{{weights}}'>
+                        <view class="weui-select">{{weights[weightIndex]}}</view>
+                      </picker>
+                    </view>
+                  </view>
+                </view>
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">手机号码</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" type='number' placeholder="请输入手机号码(必填)" value="{{refereePhoneNumber}}"
+                           name="refereePhoneNumber" bindinput="bindPhoneChange"  />
+                  </view>
+                </view>
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">身份证号</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" type='idcard' placeholder="请输入身份证号" value="{{refereeIdNumber}}"
+                           name="refereeIdNumber" bindinput="bindIdChange"  />
+                  </view>
+                </view>
+              </view>
+              <view class="weui-cells__title">北航足协裁判选填</view>
+              <view class="weui-cells weui-cells_after-title">
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">学号</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" placeholder="请输入你的学号" name="refereeScholarId"
+                           bindinput="bindRefereeScholarId" value='{{refereeScholarId}}'  />
+                  </view>
+                </view>
+              </view>
+              <view class="weui-cells__title">海淀足协裁判选填</view>
+              <view class="weui-cells weui-cells_after-title">
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">京卡卡号</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" type='number' placeholder="请输入京卡卡号" name="refereeCardNumber"
+                           bindinput="bindCardChange" value='{{refereeCardNumber}}'  />
+                  </view>
+                </view>
+                <view class="weui-cell weui-cell_input">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label">联行号</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <input class="weui-input" type='number' placeholder="请输入京卡开户行联行号" name="refereeBankNumber"
+                           bindinput="bindBankChange" value='{{refereeBankNumber}}'  />
+                  </view>
+                </view>
+                <view class="weui-cell weui-cell_select">
+                  <view class="weui-cell__hd">
+                    <view class="weui-label" style="margin-left: 15px">裁判等级</view>
+                  </view>
+                  <view class="weui-cell__bd">
+                    <picker value="{{refereeClass}}" name="refereeClass" mode="selector"
+                            bindchange="bindClassChange" range='{{refereeClasses}}'>
+                      <view class="weui-select">{{refereeClasses[refereeClassIndex]}}</view>
+                    </picker>
+                  </view>
+                </view>
+              </view>
+              <!-- end of weui-cells_after-title -->
+              <view class="weui-btn-area">
+                <button class="weui-btn" type="primary" formType="submit">提交</button>
+                <button class="weui-btn" type="default" formType="reset">重置</button>
+              </view>
+            </form>
           </view>
-          <form bindreset='formReset' bindsubmit='formSubmit'>
-            <view class="weui-cells__title">基本信息</view>
-            <view class="weui-cells weui-cells_after-title">
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">姓名</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" placeholder="请输入你的姓名(必填)" name="refereeName" bindinput="bindRefereeName"
-                         value='{{refereeName}}'  />
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">身高</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <picker class="weui-picker" name="refereeHeight" value='{{refereeHeight}}' mode="selector"
-                          bindchange="bindHeightChange" range='{{heights}}'>
-                    <view class="weui-select">{{heights[heightIndex]}}</view>
-                  </picker>
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">体重</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <picker class="weui-picker" name="refereeWeight" value='{{refereeWeight}}' mode="selector"
-                          bindchange="bindWeightChange" range='{{weights}}'>
-                    <view class="weui-select">{{weights[weightIndex]}}</view>
-                  </picker>
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">手机号码</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" type='number' placeholder="请输入手机号码(必填)" value="{{refereePhoneNumber}}"
-                         name="refereePhoneNumber" bindinput="bindPhoneChange"  />
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">身份证号</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" type='idcard' placeholder="请输入身份证号" value="{{refereeIdNumber}}"
-                         name="refereeIdNumber" bindinput="bindIdChange"  />
-                </view>
-              </view>
-            </view>
-            <view class="weui-cells__title">北航足协裁判选填</view>
-            <view class="weui-cells weui-cells_after-title">
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">学号</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" placeholder="请输入你的学号" name="refereeScholarId"
-                         bindinput="bindRefereeScholarId" value='{{refereeScholarId}}'  />
-                </view>
-              </view>
-            </view>
-            <view class="weui-cells__title">海淀足协裁判选填</view>
-            <view class="weui-cells weui-cells_after-title">
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">京卡卡号</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" type='number' placeholder="请输入京卡卡号" name="refereeCardNumber"
-                         bindinput="bindCardChange" value='{{refereeCardNumber}}'  />
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">联行号</view>
-                </view>
-                <view class="weui-cell__bd">
-                  <input class="weui-input" type='number' placeholder="请输入京卡开户行联行号" name="refereeBankNumber"
-                         bindinput="bindBankChange" value='{{refereeBankNumber}}'  />
-                </view>
-              </view>
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">裁判等级</view>
-                </view>
-                <view class="weui-cell__bd" style="margin-right: 0">
-                  <picker value="{{refereeClassIndex}}" name="refereeClass" mode="selector" bindchange="bindClassChange"
-                          range='{{refereeClasses}}'>
-                    <view class="weui-select">{{refereeClasses[refereeClassIndex]}}</view>
-                  </picker>
-                </view>
-              </view>
-            </view>
-            <!-- end of weui-cells_after-title -->
-            <view class="weui-btn-area">
-              <button class="weui-btn" type="primary" formType="submit">提交</button>
-              <button class="weui-btn" type="default" formType="reset">重置</button>
-            </view>
-          </form>
         </view>
         <!-- end of we_content 0 -->
+        <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+          <view class="page__hd">
+            <view class="page__title">所有裁判信息</view>
+          </view>
+          <block wx:if="{{isAdmin && allRefereesInfo.length > 0}}">
+            <view class="weui-cells__title">裁判信息</view>
+            <view wx:for="{{allRefereesInfo}}" wx:key="*this">
+              <view class="weui-cells weui-cells_after-title">
+                <navigator url="/pages/refereeInfo/refereeQuery?query={{item._id}}" class="weui-cell weui-cell_access"
+                           hover-class="weui-cell_active">
+                  <view class="weui-cell__bd">{{item.refereeName}}</view>
+                  <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </navigator>
+              </view>
+            </view>
+          </block>
+          <block wx:if="{{isAdmin && allRefereesInfo.length === 0}}">
+            <view class="weui-loadmore weui-loadmore_line">
+              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+            </view>
+          </block>
+          <block wx:if="{{!isAdmin}}">
+            <view class="weui-loadmore weui-loadmore_line">
+              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">您暂无权限查看</view>
+            </view>
+          </block>
+        </view>
+        <!-- end of we_content 1 -->
       </view>
       <!-- end of weui-tab__panel -->
     </view>
